# stabilized-rl

./: .gitignore  README.md  config_utils.py  docs.html  exps.py  exps_atari.py  exps_tianshou.py  exps_tianshou_behavior.py  exps_trust_region_layers.py  install.sh  pyproject.toml  setup.py  working_tianshou_requirements.txt
cliport/: requirements.txt
doexp/src/doexp/: doexp.py
garage/: setup.py
garage/src/garage/: trainer.py
include/armadillo_bits/: BaseCube_meat.hpp  Cube_meat.hpp  Mat_meat.hpp  SpBase_meat.hpp  SpSubview_meat.hpp  arma_rng.hpp  config.hpp.cmake  constants.hpp  diagmat_proxy.hpp  eop_aux.hpp  fn_log_det.hpp  fn_svd.hpp  gmm_full_meat.hpp  op_median_bones.hpp  op_princomp_meat.hpp  spop_normalise_meat.hpp
notebooks/: Plot xPPO vs PPO.ipynb  fixPO_ablations.ipynb  fixPO_vs_PPO.ipynb  fixPO_vs_PPO_MT50.ipynb  fixpo_mt10_transfer.ipynb  fixpo_mt50_time.ipynb  fixup_phase_steps_vs_c_beta.ipynb  gradient_steps_plot.ipynb  xPPO Ablations.ipynb  xppo_mt10_exp_var_plots.ipynb  xppo_mt10_historical_buffer_plots.ipynb  xppo_mt10_plots.ipynb  xppo_mt10_transfer_plots.ipynb
notebooks/.ipynb_checkpoints/: Plot xPPO vs PPO-checkpoint.ipynb  fixpo_mt50-checkpoint.ipynb  fixpo_mt50_time-checkpoint.ipynb  gradient_steps_plot-checkpoint.ipynb  xPPO Ablations-checkpoint.ipynb  xppo_mt10_historical_buffer_plots-checkpoint.ipynb  xppo_mt10_plots-checkpoint.ipynb  xppo_mt10_std_plots-checkpoint.ipynb  xppo_mt10_transfer_plots-checkpoint.ipynb
notebooks/FixPO/: fixPO_ablations.ipynb  fixPO_vs_PPO.ipynb  fixPO_vs_PPO_MT50.ipynb  fixup_phase_steps_vs_c_beta.ipynb
notebooks/FixPO/.ipynb_checkpoints/: fixup_phase_steps_vs_c_beta-checkpoint.ipynb
patches/: metaworld.patch  tianshou.patch  trust_region_layers.patch
sample-factory/: dmlab_30.sh  dmlab_collect_good_objects.sh  dmlab_collect_good_objects_eps_kl.sh  dmlab_collect_good_objects_target_coeff.sh  dmlab_exploit.sh  dmlab_nonmatch.sh
sample-factory/runs/dmlab/: baseline.py  dmlab_30.py  dmlab_collect_good_objects.py  dmlab_collect_good_objects_eps_kl.py  dmlab_exploit_def_eff.py  (+2 more)
src/: atari_xppo_tianshou.py  backtracking_algo.py  backtracking_vpg_pendulum.py  cleanup_incomplete_experiments.py  doexp.py  fake_algo.py  fixpo_tianshou.py  fixpo_tianshou_debug.py  gp_ucb_algo.py  hello.py  klpo.py  klpo_mujoco.py  klpo_pendulum.py  klpo_stable_baselines_algo.py  klpo_stbl_MT10.py  klpo_stbl_mujoco.py  metaworld_env_tianshou.py  metaworld_fixpo_debug_tianshou.py  metaworld_fixpo_tianshou.py  metaworld_ppo_tianshou.py  metaworld_utils.py  metaworld_xppo_tianshou.py  mujoco_fixpo_debug_tianshou.py  mujoco_fixpo_tianshou.py  mujoco_ppo_tianshou.py  mujoco_trpo_tianshou.py  mujoco_xppo_tianshou.py  plot_all_csvs.py  ppo_MT10.py  ppo_mujoco.py  ppo_multi_env.py  ppo_stable_baselines_algo.py  ppo_stbl_MT10.py  ppo_stbl_mujoco.py  ppo_stbl_transfer_MT10.py  test_cuda.py  ucb_backtrack_algo.py  ucb_backtracking_pendulum.py  ucb_backtracking_ppo_envs.py  ucb_backtracking_walker2d.py  (+4 more)
src/experiments/: gp_fit.py
src/stick/: __init__.py  flat_utils.py  json_output.py  pprint_output.py  stick.py  torch.py
stick/: .gitignore
trust-region-layers/: main.py  requirements.txt
trust-region-layers/cpp_projection/: CMakeLists.txt  armadillo  nlopt  pybind11
trust_region_layers_cpp_deps/armadillo/: CMakeLists.txt  README.md
(+45 files in other folders)
