[project]
name = "stick"
version = "0.1.0-dev"
description = "Log Everything. Log Easily."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "K.R. Zentner", email = "krzentner@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Distributed Computing",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
]

[project.optional-dependencies]
dev = []
test = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/krzentner/stick"
"Bug Reports" = "https://github.com/krzentner/stick/issues"
"Source" = "https://github.com/krzentner/stick"

# Use setuptools to install the main script
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Below is poetry setup for developing this package
[tool.poetry.dependencies]
python = "^3.7,<3.12"

[tool.pyright]
include = ["src"]
venv = ".venv"

[tool.poetry]
name = "stick"
version = "0.1.0-dev"
description = ""
authors = ["K.R. Zentner <krzentner@gmail.com>"]
