[tool.poetry]
name = "stabilized-rl"
version = "0.1.0"
description = ""
authors = ["K.R. Zentner <krzentner@gmail.com>"]
packages = [
  { include = "*.py", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
metaworld = {path = "./metaworld", develop = true}
torch = "^2.0"
clize = "^4.1.1"
sympy = "^1.6.1"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
scipy = "^1.5.2"
enum34 = "1.1.8"
rpyc = "^5.0.1"
toml = "^0.10.2"
numpy = ">1.22"
ray = "^2.0.0"
mujoco-py = "^2.1.2"
scikit-learn = "^1.1.2"
tqdm = "^4.64.1"
gym = "0.22.0"
polars = "^0.16.1"
plotly = "^5.13.0"
doexp = {path = "./doexp", develop = true}
tianshou = {path = "./tianshou", develop = true}
protobuf = "<3.21"
cython = "<3"
shimmy = "1.3.0"
envpool = "0.8.4"
wandb = "^0.16.0"

[tool.poetry.dev-dependencies]
tensorboard = "^2.6.0"
jupyter = "^1.0.0"
pytest = "^5.4.3"
ipdb = "^0.13.2"

[tool.pyright]
include = ["src"]
venv = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
